--- a/ui/index.html
+++ b/ui/index.html
@@ -1,20 +1,102 @@
-<!doctype html>
-<html>
-    <head>
-        <link href="/ui/style.css" rel="stylesheet" />
-    </head>
-    <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-		<h4>Welcome<h4>
-            Hi! I am your webapp.
-			<br/>
-			This is my first work.
-        </div>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <style>
+  .carousel-inner > .item > img,
+  .carousel-inner > .item > a > img {
+      width: 70%;
+      margin: auto;
+  }
+  </style>
+</head>
+<body>
+<center> 
+			<header>
+				<table border="1">
+					<tr>
+						<td width="20%"> <img src="/ui/madi.png" alt="madi" width="110"> </a> </td>
+						<td width="65%"> <center><h1 class="courier_under">  THE PAGE   </h1><center> </td>
+						<td width="40%">					
+							<table>
+								<tr>
+									<td rowspan="7"> </td>
+									<th colspan="2" class="under"> LOGIN </th>
+								</tr>
+								<tr>
+									<td> USERNAME: </td>
+									<td> <input type="text" name="myUsername" size="10" maxlength="30" /> </td>
+								</tr>
+								<tr>
+									<td> PASSWORD: </td>
+									<td> <input type="password" name="myPassword" size="10" maxlength="50" /> </td>
+								</tr>
+								<tr>
+									<td></td>
+									<td class="center"> <input type="submit" value="SUBMIT" /> </td>
+								</tr>
+							</table>
+						</td>
+					</tr>
+					<tr>
+						<th colspan="3"> <a href="  .html" /> <center><h3> REGISTER HERE </h3> </a> </center></th>
+					</tr>
+					<tr>
+						<th colspan="3"> <a href="  .html" /><center> <h3> SKIP REGISTRATION </h3></center> </a> </th>
+					</tr>
+					
+				</table>
+			</header>
+		</center>
+
+<div class="container">
+  <br>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="http://imgs.xkcd.com/comics/grownups.png " alt="Chania" width="460" height="345">
+      </div>
+
+      <div class="item">
+        <img src="http://imgs.xkcd.com/comics/circuit_diagram.png" alt="Chania" width="460" height="345">
+      </div>
+    
+      <div class="item">
+        <img src="http://imgs.xkcd.com/comics/self_description.png " alt="Flower" width="460" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img_flower2.jpg" alt="Flower" width="460" height="345">
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+</body>
 </html>
+
+
