[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -68,11 +68,11 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="http://imgs.xkcd.com/comics/grownups.png " alt="Chania" width="460" height="345">
+        <img src="http://imgs.xkcd.com/comics/startling.png " alt="Chania" width="460" height="345">
       </div>
 
       <div class="item">
-        <img src="http://imgs.xkcd.com/comics/circuit_diagram.png" alt="Chania" width="460" height="345">
+        <img src="http://imgs.xkcd.com/comics/couple.png" alt="Chania" width="460" height="345">
       </div>
     
       <div class="item">
