--- a/ui/index.html
+++ b/ui/index.html
@@ -76,7 +76,7 @@
       </div>
     
       <div class="item">
-        <img src="http://imgs.xkcd.com/comics/self_description.png " alt="Flower" width="460" height="345">
+        <img src="http://imgs.xkcd.com/comics/flies.png  " alt="Flower" width="460" height="345">
       </div>
 
       <div class="item">
