--- a/ui/index.html
+++ b/ui/index.html
@@ -80,7 +80,7 @@
       </div>
 
       <div class="item">
-        <img src="img_flower2.jpg" alt="Flower" width="460" height="345">
+        <img src="http://imgs.xkcd.com/comics/writers_strike.png" alt="Flower" width="460" height="345">
       </div>
     </div>
 
