[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -20,9 +20,9 @@
 			<header>
 				<table border="1">
 					<tr>
-						<td width="20%"> <img src="/ui/madi.png" alt="madi" width="110"> </a> </td>
+						<td width="20%"><center></center> <img src="/ui/madi.png" alt="madi" width="110"> </a></center> </td>
 						<td width="65%"> <center><h1 class="courier_under">  THE PAGE   </h1><center> </td>
-						<td width="40%">					
+						<td width="50%">					
 							<table>
 								<tr>
 									<td rowspan="7"> </td>
