--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,7 @@
 			<header>
 				<table border="1">
 					<tr>
-						<td ><center></center> <img src="/ui/madi.png" alt="madi" width="110"> </a></center> </td>
+						<td  width="15%"><center></center> <img src="/ui/madi.png" alt="madi" width="110"> </a></center> </td>
 						<td width="65%"> <center><h1 class="courier_under">  THE PAGE   </h1><center> </td>
 						<td width="40%">					
 							<table>
