--- a/ui/index.html
+++ b/ui/index.html
@@ -21,8 +21,8 @@
 				<table border="1">
 					<tr>
 						<td  width="20%"><center></center> <img src="/ui/madi.png" alt="madi" width="110"> </a></center> </td>
-						<td width="69%"> <center><h1 class="courier_under">  THE PAGE   </h1><center> </td>
-						<td width="40%">					
+						<td width="65%"> <center><h1 class="courier_under">  THE PAGE   </h1><center> </td>
+						<td width="30%">					
 							<table>
 								<tr>
 									<td rowspan="7"> </td>
@@ -44,7 +44,7 @@
 						</td>
 					</tr>
 					<tr>
-						<th colspan="3"> <a href="  .html" /> <center><h3> REGISTER HERE </h3> </a> </center></th>
+						<th colspan="3"> <a href="stu.html" /> <center><h3> REGISTER HERE </h3> </a> </center></th>
 					</tr>
 					<tr>
 						<th colspan="3"> <a href="  .html" /><center> <h3> SKIP REGISTRATION </h3></center> </a> </th>
