[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -20,8 +20,8 @@
 			<header>
 				<table border="1">
 					<tr>
-						<td  width="20%"><center></center> <img src="/ui/madi.png" alt="madi" width="110"> </a></center> </td>
-						<td width="65%"> <center><h1 class="courier_under">  THE PAGE   </h1><center> </td>
+						<td  width="20%"><center><img src="/ui/madi.png" alt="madi" width="110"> </center> </td>
+						<td width="65%"> <center><h1 class="courier_under">  THE PAGE   </h1></center> </td>
 						<td width="30%">					
 							<table>
 								<tr>
