[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -44,10 +44,10 @@
 						</td>
 					</tr>
 					<tr>
-						<th colspan="3"> <a href="stu.html" /> <center><h3> REGISTER HERE </h3> </a> </center></th>
+						<th colspan="3"> <a href="stu.html" /> <center><h3> REGISTER HERE </h3> </center></th>
 					</tr>
 					<tr>
-						<th colspan="3"> <a href="  .html" /><center> <h3> SKIP REGISTRATION </h3></center> </a> </th>
+						<th colspan="3"> <a href="  .html" /><center> <h3> SKIP REGISTRATION </h3> </center>  </th>
 					</tr>
 					
 				</table>
